add validation logic, fix styles

--- a/pages/checkTheAvaRoad.html
+++ b/pages/checkTheAvaRoad.html
@@ -78,7 +78,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/greenchest.png" alt="green chest" />
                             </label>
                             <div class="filters__chest--wrapper hidden" id="green-chest-filter">
-                                <div class="filters__chests--chest" id="green-chest-wrapper">
+                                <div class="filters__chests--chest" id="green-chest-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="green-chest-tier">Tier:</label>
                                         <select class="chest-tier-select" name="green-chest-tier" id="green-chest-tier-1">
@@ -101,7 +101,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/bluechest.png" alt="blue chest" />
                             </label>
                             <div class="filters__chest--wrapper hidden" id="blue-chest-filter">
-                                <div class="filters__chests--chest " id="blue-chest-wrapper">
+                                <div class="filters__chests--chest " id="blue-chest-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="blue-chest-tier">Tier:</label>
                                         <select class="chest-tier-select" name="blue-chest-tier" id="blue-chest-tier-1">
@@ -124,7 +124,7 @@
                                     <img src="../images/icons/checkTheAvaRoadTool/result-icons/goldenchest.png" alt="gold chest" />
                                 </label>
                             <div class="filters__chest--wrapper hidden" id="gold-chest-filter">
-                                <div class="filters__chests--chest" id="gold-chest-wrapper">
+                                <div class="filters__chests--chest" id="gold-chest-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="gold-chest-tier">Tier:</label>
                                         <select class="chest-tier-select" name="gold-chest-tier" id="gold-chest-tier-1">
@@ -151,7 +151,7 @@
                             </label>
                         
                             <div class="filters__dungeons--wrapper hidden" id="dungeons-filter">
-                                <div class="filters__chests--chest " id="dungeons-wrapper">
+                                <div class="filters__chests--chest " id="dungeons-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="dungeons-tier">Tier:</label>
                                         <select class="chest-tier-select" name="dungeons-tier" id="dungeons-tier-1">
@@ -178,7 +178,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/dung.png" alt="leather"/>
                             </label>
                             <div class="filters__leather--wrapper hidden" id="leather-filter">
-                                <div class="filters__chests--chest " id="leather-wrapper">
+                                <div class="filters__chests--chest " id="leather-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="leather-tier">Tier:</label>
                                         <select class="chest-tier-select" name="leather-tier" id="leather-tier-1">
@@ -202,7 +202,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/dung.png" alt="iron"/>
                             </label>
                             <div class="filters__iron--wrapper hidden" id="iron-filter">
-                                <div class="filters__chests--chest " id="iron-wrapper">
+                                <div class="filters__chests--chest " id="iron-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="iron-tier">Tier:</label>
                                         <select class="chest-tier-select" name="iron-tier" id="iron-tier-1">
@@ -225,7 +225,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/dung.png" alt="stone"/>
                             </label>
                             <div class="filters__stone--wrapper hidden" id="stone-filter">
-                                <div class="filters__chests--chest " id="stone-wrapper">
+                                <div class="filters__chests--chest " id="stone-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="stone-tier">Tier:</label>
                                         <select class="chest-tier-select" name="stone-tier" id="stone-tier-1">
@@ -248,7 +248,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/dung.png" alt="wood"/>
                             </label>
                             <div class="filters__wood--wrapper hidden" id="wood-filter">
-                                <div class="filters__chests--chest " id="wood-wrapper">
+                                <div class="filters__chests--chest " id="wood-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="wood-tier">Tier:</label>
                                         <select class="chest-tier-select" name="wood-tier" id="wood-tier-1">
@@ -271,7 +271,7 @@
                                 <img src="../images/icons/checkTheAvaRoadTool/result-icons/dung.png" alt="flux"/>
                             </label>
                             <div class="filters__flux--wrapper hidden" id="flux-filter">
-                                <div class="filters__chests--chest " id="flux-wrapper">
+                                <div class="filters__chests--chest " id="flux-fieldset-1">
                                     <div class="filters__chests--tier">
                                         <label for="flux-tier">Tier:</label>
                                         <select class="chest-tier-select" name="flux-tier" id="flux-tier-1">
