minor PROD hotfixes

--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
                 <span>Videos</span>
             </span>
         </li>
+          <li>
+            <a
+              class="navbar__link"
+              id="videos-link"
+              href="../pages/checkTheAvaRoad.html">
+                <span>CheckTheAvaRoad Tool</span>
+          </a>
+        </li>
       </ul>
       </div>
     </nav>
