--- a/pages/checkTheAvaRoad.html
+++ b/pages/checkTheAvaRoad.html
@@ -66,7 +66,7 @@
 
                 <div class="search__component">
                     <div class="search__component--basic-controls">
-                <input id="searchInput" name="searchInput" maxlength="25"/>
+                <input id="searchInput" name="searchInput" maxlength="25" placeholder="Type name of the avalonian road.."/>
                 <button type="submit" class="search__btn" id="search__btn">Search</button>
             </div>
             <div class="search__component--additional-controls">
